--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello world
+<!DOCTYPE html>
+<body>
+  <main>
+    <img
+      alt="Valorant player iDrop shown photoshopped holding a gun pointed at the user"
+      src="images/valorantpistolround.png"
+    />
+  </main>
+</body>
