--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <body>
   <main>
     <img
-      alt="Valorant player iDrop shown photoshopped holding a gun pointed at the user"
-      src="images/valorantpistolround.png"
+      alt="Valorant player iDrop shown photoshopped holding a gun pointed at the user as well as holding 25000 Jamaican dollars. He has a trophy saying “World's best person” on his head. Jett from Valorant is holding a single knife. There is text saying “Yo my Jett be BUSSIN. better back the f**k up from picking her unless you're getting 40 kills”"
+      src="images/idropinstajett.png"
     />
   </main>
 </body>
